salesforce/force-app/main/default/objects/Opportunity/fields/RY_Applicant__c.field-meta.xml
<CustomField><fullName>RY_Applicant__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Applicant</label><referenceTo>Contact</referenceTo><relationshipLabel>Applicant Records</relationshipLabel><relationshipName>RY_Opportunity_RY_Applicant</relationshipName><required>false</required><type>Lookup</type></CustomField>