salesforce/force-app/main/default/objects/Opportunity/fields/RY_Expected_Value_ZAR__c.field-meta.xml
<CustomField><fullName>RY_Expected_Value_ZAR__c</fullName><label>Expected Value ZAR</label><precision>18</precision><required>false</required><scale>2</scale><type>Number</type></CustomField>