salesforce/force-app/main/default/objects/Opportunity/fields/RY_Intake__c.field-meta.xml
<CustomField><fullName>RY_Intake__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Intake</label><referenceTo>RY_Intake__c</referenceTo><relationshipLabel>Intake Records</relationshipLabel><relationshipName>RY_Opportunity_RY_Intake</relationshipName><required>false</required><type>Lookup</type></CustomField>