salesforce/force-app/main/default/objects/Opportunity/fields/RY_Sample_Stage__c.field-meta.xml
<CustomField><fullName>RY_Sample_Stage__c</fullName><label>Sample Stage</label><length>255</length><required>false</required><type>Text</type></CustomField>